# hello_c

./: .travis.yml  CMakeLists.txt  Makefile  README.md  main.c
inc/: myLib.h
src/: myLib.c
